--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "4.17.1",
+    "uuid": "^8.3.2"
   }
 }
