--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "server-client-book",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.16.0"
+  },
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js",
