--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   "license": "MIT",
   "scripts": {
     "start": "npx nodemon server.js",
-    "build": "cd client && yarn install && yarn build"
+    "build": "cd client && yarn install && yarn build",
+    "test": "set NODE_ENV=production && mocha --timeout 15000 \"./{,!(node_modules|client)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "mocha": "6.2.1",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11",
     "node-sass": "4.14.1",
     "socket.io": "^4.1.2",
