--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "mocha": "6.2.1",
+    "mongo-sanitize": "1.0.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11",
     "node-sass": "4.14.1",
