--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "helmet": "3.21.1",
     "mocha": "6.2.1",
     "mongo-sanitize": "1.0.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11",
     "node-sass": "4.14.1",
+    "snyk": "1.235.0",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
   }
